--- a/.github/workflows/create-issue-on-pr-merge.yml
+++ b/.github/workflows/create-issue-on-pr-merge.yml
@@ -13,7 +13,8 @@ jobs:
         id: check_label
         run: |
           echo "Checking for the 'UI-changes' label..."
-          if echo "${{ github.event.pull_request.labels[*] }}" | grep -q "UI-changes"; then
+         echo ${{ toJson(github.event.pull_request.labels.*.name) }}
+          if echo "${{ github.event.pull_request.labels.*.name}}" | grep -q "UI-changes"; then
             echo "::set-output name=label_found::true"
           else
             echo "::set-output name=label_found::false"
@@ -21,10 +22,14 @@ jobs:
             exit 0
           fi
 
+      - name: Debug Labels
+        run: |
+          echo "Labels on the PR: ${{ toJson(github.event.pull_request.labels) }}"
+
       - name: Create issue
         if: steps.check_label.outputs.label_found == 'true'
         uses: peter-evans/create-issue-from-file@v5
         with:
           title: 'A PR with UI-changes label was merged!'
           content-filepath: .github/ISSUE_TEMPLATE/ui_changes_template.md
-          labels: 'test, e2e'
+          labels: 'UI-changes, test, e2e'
