--- a/.github/workflows/create-issue-on-pr-merge.yml
+++ b/.github/workflows/create-issue-on-pr-merge.yml
@@ -1,19 +1,20 @@
 name: Create Issue on PR Merge with UI-changes Label
+run-name: ${{ toJson(github.pull_request.*.labels) }} is testing out GitHub Actions 🚀
 on:
   pull_request:
 
 jobs:
   create_issue:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - name: Debug Labels
+      - name: Create Issue
         run: |
           echo "Labels on the PR: ${{ toJson(github.event.pull_request.labels) }}"
 
       - name: Check for specific label
         run: |
           echo "Checking for the 'UI-changes' label..."
-          if contains(github.event.pull_request.labels.*.name, 'UI-changes') then
+          if contains(github.event.pull_request.labels.name, 'UI-changes') then
             echo "Label 'UI-changes' found."
             echo "::set-output name=label_found::true"
           else
