--- a/.github/workflows/create-issue-on-pr-merge.yml
+++ b/.github/workflows/create-issue-on-pr-merge.yml
@@ -1,5 +1,5 @@
 name: Create Issue on PR Merge with UI-changes Label
-run-name: ${{ toJson(github.pull_request.*.labels) }} is testing out GitHub Actions 🚀
+run-name: ${{ toJson(github.event.pull_request.labels) }} is testing out GitHub Actions 🚀
 on:
   pull_request:
 
