--- a/.github/workflows/create-issue-on-pr-merge.yml
+++ b/.github/workflows/create-issue-on-pr-merge.yml
@@ -2,44 +2,44 @@ name: Create Issue on PR
 
 on:
   pull_request:
-    types: [opened]
+    types: [closed]
 
 jobs:
   create-issue:
     runs-on: self-hosted
-
+    if: github.event.pull_request.merged == true
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Check for 'UI-changes' label
+        id: check_label
+        run: |
+          echo "Checking for 'UI-changes' label..."
+          if [[ "${{ contains(github.event.pull_request.labels.*.name, 'UI-changes') }}" != "true" ]]; then
+            echo "Label 'UI-changes' not found. Exiting."
+            exit 0
+          fi
+          echo "Label 'UI-changes' found. Continuing."
+
+      - name: Extract PR Details
+        id: extract_pr_details
+        run: |
+          echo "::set-output name=title::Issue created due to merge PR: ${{ github.event.pull_request.title }}"
+          echo "::set-output name=body::"
+          echo "### Pull Request Details"
+          echo "**Title:** ${{ github.event.pull_request.title }}"
+          echo "**Description:** ${{ github.event.pull_request.body }}"
+          echo "**Files Changed:**"
+          git diff --name-only ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }}
+
       - name: Create GitHub Issue
-        id: create_issue
-        uses: actions/github-script@v6
+        if: steps.check_label.conclusion == 'success'
+        uses: peter-evans/create-issue-from-file@v4
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const title = `New Pull Request Created: ${context.payload.pull_request.title}`;
-            const body = `
-            ## Pull Request Created
-
-            A new pull request has been created.
-
-            - **PR Title**: ${context.payload.pull_request.title}
-            - **PR Link**: ${context.payload.pull_request.html_url}
-            - **Author**: ${context.payload.pull_request.user.login}
-
-            Please review the pull request and provide feedback.
-
-            ---
-            This issue was created automatically by a GitHub Action.
-            `;
-
-            const labels = ['pull request', 'automated issue'];
-
-            await github.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: title,
-              body: body,
-              labels: labels
-            });
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: ${{ steps.extract_pr_details.outputs.title }}
+          body: ${{ steps.extract_pr_details.outputs.body }}
+          labels: |
+            e2e
+            test
