--- a/.github/workflows/with_markdown.yml
+++ b/.github/workflows/with_markdown.yml
@@ -23,10 +23,9 @@ jobs:
           echo "**Files Changed:**"
 
       - name: Create GitHub Issue
-        uses: peter-evans/create-issue-from-file@v4
+        uses: peter-evans/create-issue-from-file@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          title: ${{ steps.extract_pr_details.outputs.title }}
+          title: '${{ github.event.pull_request.title }}  ${{github.event.pull_request.id}}'
           labels: |
             e2e
             test
