--- a/.github/workflows/with_markdown.yml
+++ b/.github/workflows/with_markdown.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Create GitHub Issue
         uses: peter-evans/create-issue-from-file@v3
         with:
-          title: '${{ github.event.pull_request.title }}  ${{github.event.pull_request.id}}'
+          title: '${{ github.event.pull_request.title }}  #${{github.event.pull_request.id}}'
           labels: |
             e2e
             test
