--- a/.github/workflows/with_markdown.yml
+++ b/.github/workflows/with_markdown.yml
@@ -30,3 +30,10 @@ jobs:
           labels: |
             e2e
             test
+      - name: create an issue
+        uses: dacbd/create-issue-action@main
+        with:
+          token: ${{ github.token }}
+          title: Simple test issue by dacbd/create-issue-action@main
+          body: '#${{github.event.pull_request.id}}'
+          label: 'e2e , test'
