--- a/.github/workflows/with_markdown.yml
+++ b/.github/workflows/with_markdown.yml
@@ -36,4 +36,4 @@ jobs:
           token: ${{ github.token }}
           title: Simple test issue by dacbd/create-issue-action@main
           body: '#${{github.event.pull_request.id}}'
-          label: 'e2e , test'
+          label: e2e , test
