--- a/.github/workflows/with_markdown.yml
+++ b/.github/workflows/with_markdown.yml
@@ -36,6 +36,6 @@ jobs:
           token: ${{ github.token }}
           title: Simple test issue by dacbd/create-issue-action@main
           body: '#${{github.event.pull_request.number}}'
-          label: |
+          labels: |
             e2e
             test
