--- a/.github/workflows/with_markdown.yml
+++ b/.github/workflows/with_markdown.yml
@@ -1,13 +1,14 @@
 name: Create Issue on PR
 
 on:
-  pull_request:
-    types: [closed]
+  push:
+    branches:
+      - develop
 
 jobs:
   create-issue:
     runs-on: self-hosted
-    if: ${{github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'UI-changes')}}
+    if: ${{contains(github.event.pull_request.labels.*.name, 'UI-changes')}}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
