--- a/.github/workflows/create-issue-from-branch.yml
+++ b/.github/workflows/create-issue-from-branch.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   create-issue:
     runs-on: self-hosted
-    if: ${{contains(github.event.pull_request.labels.*.name, 'UI-changes')}}
+    if: ${{!contains(github.event.pull_request.labels.*.name, 'UI-changes')}}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
