--- a/.github/workflows/create-issue-from-branch.yml
+++ b/.github/workflows/create-issue-from-branch.yml
@@ -3,6 +3,9 @@ name: Create Issue on PR
 on:
   pull_request:
     types: [closed]
+  push:
+    branches:
+      - master
 
 jobs:
   create-issue:
